Update weekly routine and exercise plans

--- a/Ej/Indice/index.html
+++ b/Ej/Indice/index.html
@@ -9,7 +9,7 @@ body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#1
 .wrap{max-width:980px;margin:auto;padding:16px}
 h1{margin:0 0 6px 0;font-size:20px}
 .sub{margin:0 0 14px 0;color:#555;font-size:13px}
-.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px;box-shadow:0 10px 24px rgba(0,0,0,.06)}
+.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px}
 table{width:100%;border-collapse:separate;border-spacing:0 10px}
 th{text-align:left;font-size:12px;color:#666;padding:0 10px}
 td{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:12px 10px;vertical-align:top}
@@ -18,167 +18,157 @@ td{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:12px 10px
 .btns{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
 a.btn{text-decoration:none;padding:10px 12px;border-radius:10px;border:1px solid #ccc;background:#fafafa;color:#111;font-size:13px;font-weight:bold}
 a.btn:hover{background:#eee}
-.tag{display:inline-block;margin-top:4px;padding:3px 8px;font-size:11px;border-radius:999px;border:1px solid #ccc;background:#f2f2f2}
+.tag{display:inline-block;margin-top:4px;padding:3px 8px;font-size:11px;border-radius:999px;border:1px solid #ccc}
 .fuerza{background:#e8f8ef}
 .cardio{background:#eef4ff}
 .suave{background:#fff7ed}
 .descanso{background:#f3f4f6}
-.small{font-size:12px;color:#666;margin-top:10px}
 </style>
 </head>
+
 <body>
 <div class="wrap">
-  <h1>📅 Rutina semanal (con cuello diario)</h1>
-  <p class="sub">Orden fijo: <b>Calentamiento → Rutina del día → Cardio (según día) → Enfriamiento</b></p>
+<h1>📅 Rutina semanal (cuello todos los días)</h1>
+<p class="sub">Orden fijo: <b>Movilidad → Rutina → Cardio (según día) → Enfriamiento</b></p>
 
-  <div class="card">
-    <table>
-      <thead>
-        <tr>
-          <th style="width:120px">Día</th>
-          <th>Qué toca</th>
-          <th style="width:420px">Abrir libros</th>
-        </tr>
-      </thead>
-      <tbody>
+<div class="card">
+<table>
+<thead>
+<tr>
+  <th style="width:120px">Día</th>
+  <th>Qué toca</th>
+  <th style="width:420px">Abrir libros</th>
+</tr>
+</thead>
 
-        <!-- Lunes -->
-        <tr>
-          <td><div class="day">Lunes</div><span class="tag fuerza">Fuerza</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
-            <b>Fuerza:</b> Piernas + Abdomen + Brazos.<br>
-            <b>Cardio:</b> Caminadora (suave).
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tbody>
 
-        <!-- Martes -->
-        <tr>
-          <td><div class="day">Martes</div><span class="tag cardio">Cardio</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
-            <b>Base:</b> Abdomen (suave).<br>
-            <b>Cardio:</b> Cicla recumbent.
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tr>
+<td><div class="day">Lunes</div><span class="tag fuerza">Fuerza</span></td>
+<td class="plan">
+Siempre: Cuello + Movilidad + Enfriamiento.<br>
+Fuerza: Piernas + Abdomen + Brazos.<br>
+Cardio: Caminadora.
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-        <!-- Miércoles -->
-        <tr>
-          <td><div class="day">Miércoles</div><span class="tag fuerza">Fuerza</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
-            <b>Fuerza:</b> Piernas + Abdomen + Brazos.<br>
-            <b>Cardio:</b> Miniescaladora (suave).
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tr>
+<td><div class="day">Martes</div><span class="tag cardio">Cardio</span></td>
+<td class="plan">
+Siempre: Cuello + Movilidad + Enfriamiento.<br>
+Base: Abdomen.<br>
+Cardio: Cicla recumbent.
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-        <!-- Jueves -->
-        <tr>
-          <td><div class="day">Jueves</div><span class="tag cardio">Cardio</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
-            <b>Base:</b> Abdomen (suave).<br>
-            <b>Cardio:</b> Saco de box (básico, sin saltos).
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tr>
+<td><div class="day">Miércoles</div><span class="tag fuerza">Fuerza</span></td>
+<td class="plan">
+Siempre: Cuello + Movilidad + Enfriamiento.<br>
+Fuerza: Piernas + Abdomen + Brazos.<br>
+Cardio: Miniescaladora.
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-        <!-- Viernes -->
-        <tr>
-          <td><div class="day">Viernes</div><span class="tag fuerza">Fuerza</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
-            <b>Fuerza:</b> Piernas + Abdomen + Brazos.<br>
-            <b>Cardio:</b> Caminadora (suave).
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tr>
+<td><div class="day">Jueves</div><span class="tag cardio">Cardio</span></td>
+<td class="plan">
+Siempre: Cuello + Movilidad + Enfriamiento.<br>
+Base: Abdomen.<br>
+Cardio: Saco de box (básico).
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-        <!-- Sábado -->
-        <tr>
-          <td><div class="day">Sábado</div><span class="tag suave">Suave</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
-            <b>Base:</b> Abdomen suave.<br>
-            <b>Cardio:</b> Cicla recumbent (muy suave).
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tr>
+<td><div class="day">Viernes</div><span class="tag fuerza">Fuerza</span></td>
+<td class="plan">
+Siempre: Cuello + Movilidad + Enfriamiento.<br>
+Fuerza: Piernas + Abdomen + Brazos.<br>
+Cardio: Caminadora.
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-        <!-- Domingo -->
-        <tr>
-          <td><div class="day">Domingo</div><span class="tag descanso">Descanso</span></td>
-          <td class="plan">
-            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento (suave).<br>
-            <b>Opcional:</b> caminata suave.
-          </td>
-          <td>
-            <div class="btns">
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
-            </div>
-          </td>
-        </tr>
+<tr>
+<td><div class="day">Sábado</div><span class="tag suave">Suave</span></td>
+<td class="plan">
+Siempre: Cuello + Movilidad + Enfriamiento.<br>
+Base: Abdomen.<br>
+Cardio: Cicla recumbent (muy suave).
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-      </tbody>
-    </table>
+<tr>
+<td><div class="day">Domingo</div><span class="tag descanso">Descanso</span></td>
+<td class="plan">
+Cuello + Movilidad + Enfriamiento (suave).<br>
+Opcional: caminata tranquila.
+</td>
+<td>
+<div class="btns">
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
+</div>
+</td>
+</tr>
 
-    <div class="small">
-      Cardio alternado incluido: <b>caminadora / recumbent / miniescaladora / saco</b>.
-    </div>
-  </div>
+</tbody>
+</table>
+</div>
 </div>
 </body>
 </html>
