--- a/Ej/Indice/index.html
+++ b/Ej/Indice/index.html
@@ -3,172 +3,246 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Índice semanal – Rutinas</title>
+<title>Índice semanal – Rutinas (Objetivo por día)</title>
 <style>
-body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#111}
-.wrap{max-width:980px;margin:auto;padding:16px}
-h1{margin:0 0 6px 0;font-size:20px}
-.sub{margin:0 0 14px 0;color:#555;font-size:13px}
-.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px}
-table{width:100%;border-collapse:separate;border-spacing:0 10px}
-th{text-align:left;font-size:12px;color:#666;padding:0 10px}
-td{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:12px 10px;vertical-align:top}
-.day{font-weight:bold;font-size:14px}
-.plan{font-size:13px;color:#333;line-height:1.25}
-.btns{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
-a.btn{text-decoration:none;padding:10px 12px;border-radius:10px;border:1px solid #ccc;background:#fafafa;color:#111;font-size:13px;font-weight:bold}
-a.btn:hover{background:#eee}
-.tag{display:inline-block;margin-top:4px;padding:3px 8px;font-size:11px;border-radius:999px;border:1px solid #ccc}
-.fuerza{background:#e8f8ef}
-.cardio{background:#eef4ff}
-.suave{background:#fff7ed}
-.descanso{background:#f3f4f6}
+  body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#111}
+  .wrap{max-width:980px;margin:auto;padding:16px}
+  h1{margin:0 0 6px 0;font-size:20px}
+  .sub{margin:0 0 14px 0;color:#555;font-size:13px;line-height:1.3}
+  .card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px}
+  table{width:100%;border-collapse:separate;border-spacing:0 10px}
+  th{text-align:left;font-size:12px;color:#666;padding:0 10px}
+  td{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:12px 10px;vertical-align:top}
+  .day{font-weight:bold;font-size:14px}
+  .tag{display:inline-block;margin-top:6px;padding:3px 8px;font-size:11px;border-radius:999px;border:1px solid #ccc}
+  .fuerza{background:#e8f8ef}
+  .cardio{background:#eef4ff}
+  .mixto{background:#fff7ed}
+  .descanso{background:#f3f4f6}
+  .plan{font-size:13px;color:#222;line-height:1.3}
+  .plan b{color:#111}
+  .btns{display:flex;flex-wrap:wrap;gap:8px;margin-top:10px}
+  a.btn{
+    text-decoration:none;padding:10px 12px;border-radius:10px;
+    border:1px solid #ccc;background:#fafafa;color:#111;
+    font-size:13px;font-weight:bold
+  }
+  a.btn:hover{background:#eee}
+  .small{font-size:12px;color:#666;margin-top:10px;line-height:1.3}
 </style>
 </head>
 
 <body>
 <div class="wrap">
-<h1>📅 Rutina semanal (cuello todos los días)</h1>
-<p class="sub">Orden fijo: <b>Movilidad → Rutina → Cardio (según día) → Enfriamiento</b></p>
+  <h1>📅 Rutina semanal (Objetivo por día)</h1>
+  <p class="sub">
+    <b>Orden fijo:</b> Movilidad → Cuello → (Fuerza/Abdomen) → Cardio (según día) → Estiramientos.<br>
+    <b>Nota rápida:</b> Cuello va todos los días (corto).
+  </p>
 
-<div class="card">
-<table>
-<thead>
-<tr>
-  <th style="width:120px">Día</th>
-  <th>Qué toca</th>
-  <th style="width:420px">Abrir libros</th>
-</tr>
-</thead>
+  <div class="card">
+    <table>
+      <thead>
+        <tr>
+          <th style="width:120px;">Día</th>
+          <th>Qué toca (OBJETIVO + ORDEN)</th>
+          <th style="width:430px;">Libros (herramientas)</th>
+        </tr>
+      </thead>
 
-<tbody>
+      <tbody>
 
-<tr>
-<td><div class="day">Lunes</div><span class="tag fuerza">Fuerza</span></td>
-<td class="plan">
-Siempre: Cuello + Movilidad + Enfriamiento.<br>
-Fuerza: Piernas + Abdomen + Brazos.<br>
-Cardio: Caminadora.
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- LUNES -->
+        <tr>
+          <td>
+            <div class="day">Lunes</div>
+            <span class="tag fuerza">Fuerza Pierna (Base)</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> músculo en piernas + gasto calórico (adelgazar).<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (5 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Piernas (principal)<br>
+            4) Abdomen (ligero)<br>
+            5) Caminadora (10–15 min suave)<br>
+            6) Estiramientos (5 min)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+          </td>
+        </tr>
 
-<tr>
-<td><div class="day">Martes</div><span class="tag cardio">Cardio</span></td>
-<td class="plan">
-Siempre: Cuello + Movilidad + Enfriamiento.<br>
-Base: Abdomen.<br>
-Cardio: Cicla recumbent.
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- MARTES -->
+        <tr>
+          <td>
+            <div class="day">Martes</div>
+            <span class="tag cardio">Cardio Continuo</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> adelgazar (quemar grasa) sin cargar columna.<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (5 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Recumbent (25–35 min suave/medio)<br>
+            4) Abdomen (muy suave, isométrico)<br>
+            5) Estiramientos (5 min)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+            <div class="small"><b>Cardio hoy:</b> Cicla recumbent.</div>
+          </td>
+        </tr>
 
-<tr>
-<td><div class="day">Miércoles</div><span class="tag fuerza">Fuerza</span></td>
-<td class="plan">
-Siempre: Cuello + Movilidad + Enfriamiento.<br>
-Fuerza: Piernas + Abdomen + Brazos.<br>
-Cardio: Miniescaladora.
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- MIÉRCOLES -->
+        <tr>
+          <td>
+            <div class="day">Miércoles</div>
+            <span class="tag fuerza">Fuerza Tren Superior</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> músculo en brazos/pecho + postura + metabolismo.<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (5 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Brazos/Pecho (principal)<br>
+            4) Abdomen (ligero)<br>
+            5) Miniescaladora (8–12 min suave)<br>
+            6) Estiramientos (5 min)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos/Pecho</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+            <div class="small"><b>Cardio hoy:</b> Miniescaladora.</div>
+          </td>
+        </tr>
 
-<tr>
-<td><div class="day">Jueves</div><span class="tag cardio">Cardio</span></td>
-<td class="plan">
-Siempre: Cuello + Movilidad + Enfriamiento.<br>
-Base: Abdomen.<br>
-Cardio: Saco de box (básico).
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- JUEVES -->
+        <tr>
+          <td>
+            <div class="day">Jueves</div>
+            <span class="tag cardio">Intervalos</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> adelgazar (alto impacto NO; intervalos cortos sí).<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (5 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Saco de box básico (intervalos cortos)<br>
+            4) Abdomen (suave)<br>
+            5) Estiramientos (5 min)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+            <div class="small"><b>Cardio hoy:</b> Saco de box (básico).</div>
+          </td>
+        </tr>
 
-<tr>
-<td><div class="day">Viernes</div><span class="tag fuerza">Fuerza</span></td>
-<td class="plan">
-Siempre: Cuello + Movilidad + Enfriamiento.<br>
-Fuerza: Piernas + Abdomen + Brazos.<br>
-Cardio: Caminadora.
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- VIERNES -->
+        <tr>
+          <td>
+            <div class="day">Viernes</div>
+            <span class="tag fuerza">Fuerza Mixta (Moldear)</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> moldear + mantener fuerza sin sobrecargar.<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (5 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Piernas (moderado) + Brazos (ligero)<br>
+            4) Abdomen (ligero)<br>
+            5) Caminadora (10 min suave)<br>
+            6) Estiramientos (5 min)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos/Pecho</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+          </td>
+        </tr>
 
-<tr>
-<td><div class="day">Sábado</div><span class="tag suave">Suave</span></td>
-<td class="plan">
-Siempre: Cuello + Movilidad + Enfriamiento.<br>
-Base: Abdomen.<br>
-Cardio: Cicla recumbent (muy suave).
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- SÁBADO -->
+        <tr>
+          <td>
+            <div class="day">Sábado</div>
+            <span class="tag mixto">Recuperación Activa</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> recuperar + seguir adelgazando sin fatiga.<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (8–10 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Abdomen (suave, control)<br>
+            4) Recumbent (15–20 min muy suave)<br>
+            5) Estiramientos (5–8 min)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+            <div class="small"><b>Cardio hoy:</b> Recumbent suave.</div>
+          </td>
+        </tr>
 
-<tr>
-<td><div class="day">Domingo</div><span class="tag descanso">Descanso</span></td>
-<td class="plan">
-Cuello + Movilidad + Enfriamiento (suave).<br>
-Opcional: caminata tranquila.
-</td>
-<td>
-<div class="btns">
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
-<a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Enfriamiento</a>
-</div>
-</td>
-</tr>
+        <!-- DOMINGO -->
+        <tr>
+          <td>
+            <div class="day">Domingo</div>
+            <span class="tag descanso">Higiene / Descanso</span>
+          </td>
+          <td class="plan">
+            <b>Objetivo:</b> bajar dolor/rigidez y recargar energía.<br><br>
+            <b>Orden:</b><br>
+            1) Movilidad (5–8 min)<br>
+            2) Cuello (5–7 min)<br>
+            3) Estiramientos (8–10 min)<br>
+            4) Opcional: caminata 10–15 min (muy suave)
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Mov/">Movilidad</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Esti/">Estiramientos</a>
+            </div>
+          </td>
+        </tr>
 
-</tbody>
-</table>
-</div>
+      </tbody>
+    </table>
+
+    <div class="small">
+      <b>Cardios alternados:</b> Caminadora (L+V) / Recumbent (M+S) / Miniescaladora (X) / Box básico (J).
+    </div>
+  </div>
 </div>
 </body>
 </html>
