Update title and content in index.html

--- a/Ej/Abd/index.html
+++ b/Ej/Abd/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Rutina – Abdomen (Libro)</title>
+<title>Rutina – Abdomen </title>
 
 <style>
   :root{
@@ -20,7 +20,7 @@
     font-family: Arial, Helvetica, sans-serif;
     color:var(--ink);
 
-    /* Fondo claro con textura luminosa / brillos tenues */
+    /* Fondo  */
     background:
       radial-gradient(1200px 600px at 15% 10%, rgba(99,102,241,.10), transparent 60%),
       radial-gradient(900px 500px at 85% 15%, rgba(14,165,233,.10), transparent 55%),
@@ -176,9 +176,9 @@
 
   <div class="book">
 
-    <!-- PÁGINA 1: PORTADA -->
+    <--PORTADA -->
     <section class="page active" data-page="1">
-      <h1>Rutina – Abdomen (Libro)</h1>
+      <h1>Rutina – Abdomen </h1>
       <p class="sub">3 páginas: portada, rutina base, reels embebidos.</p>
 
       <div class="card">
@@ -188,25 +188,22 @@
         </div>
         <ol>
           <li><b>Página 1:</b> Portada</li>
-          <li><b>Página 2:</b> 3 ejercicios base</li>
-          <li><b>Página 3:</b> Reels de abdomen (embebidos)</li>
+          <li><b>Página 2:</b> Ejercicios base</li>
+          <li><b>Página 3:</b> Reels </li>
         </ol>
-        <p class="note" style="margin-top:12px;">
-          Nota: algunos reels pueden no embedir si Facebook bloquea contenido. Si pasa, usa el link que aparece bajo cada tarjeta.
-        </p>
+       
       </div>
     </section>
 
-    <!-- PÁGINA 2: TUS 3 EJERCICIOS -->
+    <!-- PÁGINA 2:  3 EJERCICIOS -->
     <section class="page" data-page="2">
       <h1>Abdomen</h1>
-      <p class="sub">Rutina segura para fortalecer sin dañar la columna</p>
+      <p class="sub">Rutina segura </p>
 
       <div class="grid">
         <div class="card">
           <h3>1. Vacío abdominal (acostada)</h3>
-          <p>Activa el abdomen profundo y reduce la barriga.</p>
-          <div class="imgbox">
+                   <div class="imgbox">
             <img src="img/vacio_abdominal.jpg" alt="Vacío abdominal">
           </div>
           <ol>
@@ -250,7 +247,7 @@
       </div>
     </section>
 
-    <!-- PÁGINA 3: SOLO REELS DE ABDOMEN + BOTÓN REGRESAR -->
+    <!-- PÁGINA 3:  REELS DE ABDOMEN + BOTÓN REGRESAR -->
     <section class="page" data-page="3">
       <div class="section-title">
         <h2>Abdomen – Reels</h2>
