Refactor list items and add bold styling

--- a/Ej/Cue/index.html
+++ b/Ej/Cue/index.html
@@ -210,10 +210,7 @@
           </div>
 
           <ol>
-            <li>Acuéstate boca arriba, cabeza apoyada.
-
-
-</li>
+            <li>Acuéstate boca arriba, cabeza apoyada.</li>
             <li>Mete la barbilla (como hacer papada).</li>
             <li>NO levantes la cabeza del piso.</li>
             <li>Vuelve suave y repite lento.</li>
@@ -232,12 +229,12 @@
           </div>
 
           <ol>
-            <li>Siéntate o acuéstate cómoda.
+            <li>Siéntate o acuéstate cómoda.</li>
             <li>Pon la mano en la frente.</li>
             <li>Empuja suave contra la mano (la cabeza NO se mueve).</li>
             <li>Sostén y suelta.</li>
           </ol>
-          <p>Series: 3×5 · Respiración normal (no aguantar aire)</p>
+            <p class="note"><b> Series: 3×5 · Respiración normal (no aguantar aire)</b></p>
         
         </div>
 
@@ -256,7 +253,7 @@
             <li>Sostén y suelta. Repite al otro lado.</li>
             <li>Todo lento.</li>
           </ol>
-          <p>Series: 2×5 por lado · Respiración normal</p>
+          <p class="note"><b>Series: 2×5 por lado · Respiración normal</p></p>
          
         </div>
 
